<resources>
    <string name="app_name">Chuck Joke</string>
    <string name="default_text">Hello world, so great!</string>
    <string name="click_to_load">Click to load a joke</string>
    <string name="header_text">Come on show me a joke</string>
    <string name="hint_chuck">Chuck</string>
    <string name="hint_norris">Norris</string>
    <string name="result_empty">Query failed, no valid data</string>
    <string name="show_me_joke">show me a joke</string>
    <string name="joke_count">No joke available yet</string>
    <string name="go_to_home">go to jokes</string>
    <string name="description">image view</string>
    <string name="welcome">Welcome to Chuck Jokes</string>
</resources>
