<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
             android:id="@+id/framelayout"
    tools:context="com.neuandroid.chuck.MainActivity"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/joke_count"
            android:background="@android:color/darker_gray"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/header_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_first_name"
                style="@style/edt_name_style"
                android:hint="@string/hint_chuck"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/edt_last_name"
                style="@style/edt_name_style"
                android:hint="@string/hint_norris"
                android:textColor="@android:color/black"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tv_chuck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_margin"
            android:background="#11000000"
            android:padding="10dp"
            android:text="@string/default_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Hello World!"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <Button
        android:id="@+id/trigger"
        android:text="@string/show_me_joke"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</FrameLayout>
