<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/linearlayout"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:contentDescription="@string/description"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/ic_launcher"/>
    <Button
        android:id="@+id/go_to_joke_page"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_to_home"/>

</LinearLayout>